--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Bateria</h1>
+    <h1>Drums</h1>
 
     <div class="keys">
         <div data-key="keyq" class="key">Q</div>
@@ -25,10 +25,10 @@
     </div>
     <div class="composer">
         <input type="text" id="input" placeholder="Faça uma composição..." />
-        <button>Tocar</button>
+        <button>Play</button>
     </div>
 
-    <footer>Criado pela B7Web</footer>
+    <footer>&copy; B7Web - Amanda Flores</footer>
 
     <audio id="s_keyq" src="sounds/keyq.wav"></audio>
     <audio id="s_keyw" src="sounds/keyw.wav"></audio>
