--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bateria</title>
+    <title>Drums</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Drums</h1>
-
+    <h1>DRUMS</h1>
     <div class="keys">
         <div data-key="keyq" class="key">Q</div>
         <div data-key="keyw" class="key">W</div>
@@ -25,7 +24,7 @@
     </div>
     <div class="composer">
         <input type="text" id="input" placeholder="Make a beat!" />
-        <button>Play</button>
+        <button>PLAY</button>
     </div>
 
     <footer>&copy; B7Web - Amanda Flores</footer>
